# exhaustive-pauli

./: Cargo.toml  README.md  output.txt  output2.txt
python/: main.py  pyproject.toml
python/src/: rewrites.py
python/src/python/: clifford.py  main.py  rewrites.py
src/: main.rs
test_files/: circ.json  z.json
test_files/input_circuits/: phase_poly.json  t_doped_goto.json
test_files/output_circuits/: t_doped_subcircuit.json
test_files/tket1_json/: barenco_tof_5.json  goto.json
test_files/tket2_json/: subcircuit.json
