[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CalMacCQ", email = "93673602+CalMacCQ@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "tket2>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
